--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -34,6 +34,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_navigation_menu"
         app:layout_constraintTop_toBottomOf="@id/flFragment" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
